--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+.loader {
+  border-top-color: #6366f1; /* Indigo-500 */
+  border-right-color: transparent;
+  border-bottom-color: transparent;
+  border-left-color: transparent;
+  border-width: 4px;
+  border-style: solid;
+  border-radius: 50%;
+}
